// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mappers map binance dex messages 1`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 29900,
        "price": 0.00005325,
      },
    ],
    "bids": Array [
      Object {
        "amount": 7000,
        "price": 0.00003212,
      },
    ],
    "exchange": "binance-dex",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BLINK-9C6_BNB",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map binance dex messages 2`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 0.00005253,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0,
        "price": 0.000004,
      },
      Object {
        "amount": 350000,
        "price": 5e-8,
      },
    ],
    "exchange": "binance-dex",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BLINK-9C6_BNB",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map binance dex messages 3`] = `
Array [
  Object {
    "amount": 2070,
    "exchange": "binance-dex",
    "id": "16927042-0",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 0.00042701,
    "side": "buy",
    "symbol": "PHB-2DF_BNB",
    "timestamp": 2019-07-01T00:00:22.635Z,
    "type": "trade",
  },
  Object {
    "amount": 2930,
    "exchange": "binance-dex",
    "id": "16927042-1",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 0.00042701,
    "side": "buy",
    "symbol": "PHB-2DF_BNB",
    "timestamp": 2019-07-01T00:00:22.635Z,
    "type": "trade",
  },
]
`;

exports[`mappers map binance dex messages 4`] = `Array []`;

exports[`mappers map binance futures messages 1`] = `Array []`;

exports[`mappers map binance futures messages 2`] = `
Array [
  Object {
    "exchange": "binance-futures",
    "fundingRate": undefined,
    "indexPrice": undefined,
    "lastPrice": 10223.74,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "markPrice": undefined,
    "openInterest": undefined,
    "symbol": "BTCUSDT",
    "timestamp": 2019-09-17T04:05:03.467Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map binance futures messages 3`] = `
Array [
  Object {
    "exchange": "binance-futures",
    "fundingRate": 0.0001,
    "indexPrice": undefined,
    "lastPrice": 10223.74,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "markPrice": 8291.34697815,
    "openInterest": undefined,
    "symbol": "BTCUSDT",
    "timestamp": 2019-10-01T00:00:03.001Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map binance futures messages 4`] = `Array []`;

exports[`mappers map binance futures messages 5`] = `
Array [
  Object {
    "amount": 0.044,
    "exchange": "binance-futures",
    "id": "10934580",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 7627.6,
    "side": "buy",
    "symbol": "BTCUSDT",
    "timestamp": 2019-11-22T00:06:04.086Z,
    "type": "trade",
  },
]
`;

exports[`mappers map binance messages 1`] = `
Array [
  Object {
    "amount": 33.82,
    "exchange": "binance",
    "id": "40756030",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 0.0042699,
    "side": "buy",
    "symbol": "BNBBTC",
    "timestamp": 2019-04-01T00:00:00.940Z,
    "type": "trade",
  },
]
`;

exports[`mappers map binance messages 2`] = `
Array [
  Object {
    "amount": 6.48,
    "exchange": "binance",
    "id": "60276726",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 0.0021965,
    "side": "sell",
    "symbol": "BNBBTC",
    "timestamp": 2019-09-01T00:00:01.034Z,
    "type": "trade",
  },
]
`;

exports[`mappers map binance messages 3`] = `Array []`;

exports[`mappers map binance messages 4`] = `Array []`;

exports[`mappers map binance messages 5`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 2.31652,
        "price": 4095.99,
      },
      Object {
        "amount": 1.425419,
        "price": 4096,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0.009765,
        "price": 4091.92,
      },
      Object {
        "amount": 0.763931,
        "price": 4089.09,
      },
    ],
    "exchange": "binance",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BTCUSDC",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map binance messages 6`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 4111.84,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0,
        "price": 4084.88,
      },
    ],
    "exchange": "binance",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BTCUSDC",
    "timestamp": 2019-04-01T00:00:01.699Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map binance messages 7`] = `Array []`;

exports[`mappers map binance messages 8`] = `Array []`;

exports[`mappers map binance messages 9`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 3945,
        "price": 0.00002253,
      },
      Object {
        "amount": 50641,
        "price": 0.00002256,
      },
      Object {
        "amount": 1777,
        "price": 0.00002258,
      },
    ],
    "bids": Array [
      Object {
        "amount": 114,
        "price": 0.00002248,
      },
      Object {
        "amount": 370,
        "price": 0.00002246,
      },
      Object {
        "amount": 2673,
        "price": 0.00002245,
      },
      Object {
        "amount": 390,
        "price": 0.00002244,
      },
      Object {
        "amount": 3425,
        "price": 0.00002243,
      },
    ],
    "exchange": "binance",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "GNTBTC",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
  Object {
    "asks": Array [
      Object {
        "amount": 3945,
        "price": 0.00002253,
      },
    ],
    "bids": Array [
      Object {
        "amount": 114,
        "price": 0.00002248,
      },
      Object {
        "amount": 370,
        "price": 0.00002246,
      },
    ],
    "exchange": "binance",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "GNTBTC",
    "timestamp": 2019-04-01T00:00:08.698Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map binance messages 10`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 0.00002257,
      },
      Object {
        "amount": 6080,
        "price": 0.00002262,
      },
    ],
    "bids": Array [],
    "exchange": "binance",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "GNTBTC",
    "timestamp": 2019-04-01T00:00:09.699Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitfinex derivatives messages 1`] = `Array []`;

exports[`mappers map bitfinex derivatives messages 2`] = `
Array [
  Object {
    "exchange": "bitfinex-derivatives",
    "fundingRate": undefined,
    "indexPrice": 173.57,
    "lastPrice": 173.535,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "markPrice": undefined,
    "openInterest": undefined,
    "symbol": "BTCF0:USTF0",
    "timestamp": 2019-09-29T00:00:01.369Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map bitfinex derivatives messages 3`] = `Array []`;

exports[`mappers map bitfinex derivatives messages 4`] = `
Array [
  Object {
    "exchange": "bitfinex-derivatives",
    "fundingRate": 0.00196337,
    "indexPrice": 8051.45,
    "lastPrice": 8090.5,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "markPrice": undefined,
    "openInterest": undefined,
    "symbol": "BTCF0:USTF0",
    "timestamp": 2019-09-30T00:00:52.225Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map bitfinex derivatives messages 5`] = `
Array [
  Object {
    "exchange": "bitfinex-derivatives",
    "fundingRate": 0,
    "indexPrice": 8197.3,
    "lastPrice": 8192.7,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "markPrice": 8196.973333333333,
    "openInterest": undefined,
    "symbol": "BTCF0:USTF0",
    "timestamp": 2019-10-08T00:00:32.311Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map bitfinex derivatives messages 6`] = `
Array [
  Object {
    "exchange": "bitfinex-derivatives",
    "fundingRate": 0,
    "indexPrice": 8208.45,
    "lastPrice": 8210.5,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "markPrice": 8208.893333333333,
    "openInterest": undefined,
    "symbol": "BTCF0:USTF0",
    "timestamp": 2019-10-08T00:14:59.520Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map bitfinex derivatives messages 7`] = `Array []`;

exports[`mappers map bitfinex messages 1`] = `Array []`;

exports[`mappers map bitfinex messages 2`] = `Array []`;

exports[`mappers map bitfinex messages 3`] = `Array []`;

exports[`mappers map bitfinex messages 4`] = `
Array [
  Object {
    "amount": 0.00705845,
    "exchange": "bitfinex",
    "id": "382489563",
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "price": 10087.98969503,
    "side": "buy",
    "symbol": "BTCUSD",
    "timestamp": 2019-08-01T00:00:00.709Z,
    "type": "trade",
  },
]
`;

exports[`mappers map bitfinex messages 5`] = `Array []`;

exports[`mappers map bitfinex messages 6`] = `Array []`;

exports[`mappers map bitfinex messages 7`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 13.33333333,
        "price": 218.75,
      },
      Object {
        "amount": 2,
        "price": 218.76,
      },
    ],
    "bids": Array [
      Object {
        "amount": 31.52,
        "price": 216,
      },
    ],
    "exchange": "bitfinex",
    "isSnapshot": true,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "ETHUSD",
    "timestamp": 2019-08-01T00:00:00.541Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitfinex messages 8`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 18.10913638,
        "price": 219.11,
      },
    ],
    "bids": Array [],
    "exchange": "bitfinex",
    "isSnapshot": false,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "ETHUSD",
    "timestamp": 2019-08-01T00:00:01.214Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitfinex messages 9`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 218.99,
      },
    ],
    "bids": Array [],
    "exchange": "bitfinex",
    "isSnapshot": false,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "ETHUSD",
    "timestamp": 2019-08-01T00:00:01.769Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitfinex messages 10`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 0,
        "price": 218.03,
      },
    ],
    "exchange": "bitfinex",
    "isSnapshot": false,
    "localTimestamp": 2019-08-01T00:00:02.496Z,
    "symbol": "ETHUSD",
    "timestamp": 2019-08-01T00:00:02.483Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitfinex messages 11`] = `Array []`;

exports[`mappers map bitflyer messages 1`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0.14,
        "price": 0.02919,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0.022,
        "price": 0.0146,
      },
    ],
    "exchange": "bitflyer",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BCH_BTC",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitflyer messages 2`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 1046603,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0.05,
        "price": 1043400,
      },
    ],
    "exchange": "bitflyer",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "FX_BTC_JPY",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitflyer messages 3`] = `
Array [
  Object {
    "amount": 0.01,
    "exchange": "bitflyer",
    "id": "1246449270",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 1046399,
    "side": "buy",
    "symbol": "FX_BTC_JPY",
    "timestamp": 2019-09-01T00:00:11.225Z,
    "type": "trade",
  },
  Object {
    "amount": 0.002,
    "exchange": "bitflyer",
    "id": "1246449271",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 1046400,
    "side": "buy",
    "symbol": "FX_BTC_JPY",
    "timestamp": 2019-09-01T00:00:11.225Z,
    "type": "trade",
  },
]
`;

exports[`mappers map bitmex messages 1`] = `
Array [
  Object {
    "amount": 1000,
    "exchange": "bitmex",
    "id": "f73b6f28-075a-3548-a81c-8c843afd2746",
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "price": 8544.5,
    "side": "sell",
    "symbol": "XBTUSD",
    "timestamp": 2019-06-01T00:00:19.163Z,
    "type": "trade",
  },
]
`;

exports[`mappers map bitmex messages 2`] = `Array []`;

exports[`mappers map bitmex messages 3`] = `Array []`;

exports[`mappers map bitmex messages 4`] = `
Array [
  Object {
    "exchange": "bitmex",
    "fundingRate": undefined,
    "indexPrice": 0.03131,
    "lastPrice": 0.03161,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "markPrice": 0.03162,
    "openInterest": 150499,
    "symbol": "ETHM19",
    "timestamp": 2019-05-31T23:59:30.000Z,
    "type": "derivative_ticker",
  },
  Object {
    "exchange": "bitmex",
    "fundingRate": undefined,
    "indexPrice": 0.013382,
    "lastPrice": 0.01354,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "markPrice": 0.013533,
    "openInterest": 204654,
    "symbol": "LTCM19",
    "timestamp": 2019-05-31T23:59:55.000Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map bitmex messages 5`] = `
Array [
  Object {
    "exchange": "bitmex",
    "fundingRate": undefined,
    "indexPrice": 0.03131,
    "lastPrice": 267.75,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "markPrice": 0.03162,
    "openInterest": 150499,
    "symbol": "ETHM19",
    "timestamp": 2019-05-31T23:59:58.022Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map bitmex messages 6`] = `Array []`;

exports[`mappers map bitmex messages 7`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 501,
        "price": 88846.5,
      },
      Object {
        "amount": 40,
        "price": 9780.5,
      },
      Object {
        "amount": 61227,
        "price": 8586,
      },
    ],
    "bids": Array [],
    "exchange": "bitmex",
    "isSnapshot": true,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "XBTUSD",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "book_change",
  },
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 417,
        "price": 0.0010102,
      },
    ],
    "exchange": "bitmex",
    "isSnapshot": true,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "EOSM19",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitmex messages 8`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 91227,
        "price": 8586,
      },
    ],
    "bids": Array [],
    "exchange": "bitmex",
    "isSnapshot": false,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "XBTUSD",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitmex messages 9`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 8586,
      },
    ],
    "bids": Array [],
    "exchange": "bitmex",
    "isSnapshot": false,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "XBTUSD",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitmex messages 10`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 416,
        "price": 0.0010102,
      },
    ],
    "exchange": "bitmex",
    "isSnapshot": false,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "EOSM19",
    "timestamp": 2019-06-01T00:00:28.619Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitmex messages 11`] = `
Array [
  Object {
    "exchange": "bitmex",
    "fundingRate": undefined,
    "indexPrice": undefined,
    "lastPrice": undefined,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "markPrice": undefined,
    "openInterest": 58922153,
    "symbol": "ETHUSD",
    "timestamp": undefined,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map bitstamp messages 1`] = `Array []`;

exports[`mappers map bitstamp messages 2`] = `
Array [
  Object {
    "amount": 0.001643,
    "exchange": "bitstamp",
    "id": "84550458",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 3651.3,
    "side": "buy",
    "symbol": "BTCEUR",
    "timestamp": 2019-04-01T00:00:03.243Z,
    "type": "trade",
  },
]
`;

exports[`mappers map bitstamp messages 3`] = `Array []`;

exports[`mappers map bitstamp messages 4`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 2,
        "price": 168.75,
      },
      Object {
        "amount": 0.49428809,
        "price": 168.76,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0.04249473,
        "price": 51046.31,
      },
      Object {
        "amount": 0.00040718,
        "price": 60000,
      },
    ],
    "exchange": "bitstamp",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BCHUSD",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
  Object {
    "asks": Array [
      Object {
        "amount": 2,
        "price": 168.75,
      },
    ],
    "bids": Array [],
    "exchange": "bitstamp",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BCHUSD",
    "timestamp": 2019-04-01T00:00:00.436Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitstamp messages 5`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 180,
        "price": 169.28,
      },
      Object {
        "amount": 360,
        "price": 170.16,
      },
    ],
    "bids": Array [],
    "exchange": "bitstamp",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BCHUSD",
    "timestamp": 2019-04-01T00:00:01.338Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bitstamp messages 6`] = `
Array [
  Object {
    "amount": 0.02834,
    "exchange": "bitstamp",
    "id": "98000129",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 8304.47,
    "side": "buy",
    "symbol": "BTCUSD",
    "timestamp": 2019-10-01T00:00:00.557Z,
    "type": "trade",
  },
]
`;

exports[`mappers map bybit messages 1`] = `Array []`;

exports[`mappers map bybit messages 2`] = `
Array [
  Object {
    "exchange": "bybit",
    "fundingRate": 0.0001,
    "indexPrice": 190.49,
    "lastPrice": 190.65,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "markPrice": 190.5,
    "openInterest": 13793020,
    "symbol": "ETHUSD",
    "timestamp": 2019-11-06T12:49:56.000Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map bybit messages 3`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 704729,
        "price": 9366,
      },
    ],
    "bids": Array [
      Object {
        "amount": 58486,
        "price": 9353.5,
      },
    ],
    "exchange": "bybit",
    "isSnapshot": true,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "BTCUSD",
    "timestamp": 2019-11-06T12:50:48.627Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bybit messages 4`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 674462,
        "price": 9367,
      },
    ],
    "bids": Array [],
    "exchange": "bybit",
    "isSnapshot": false,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "BTCUSD",
    "timestamp": 2019-11-06T12:50:50.028Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bybit messages 5`] = `
Array [
  Object {
    "amount": 6000,
    "exchange": "bybit",
    "id": "8c53dd53-2df5-563d-8e3b-e0dbba7c55a0",
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "price": 9366,
    "side": "buy",
    "symbol": "BTCUSD",
    "timestamp": 2019-11-06T12:50:52.000Z,
    "type": "trade",
  },
]
`;

exports[`mappers map bybit messages 6`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 0.3013,
      },
      Object {
        "amount": 41761,
        "price": 0.3038,
      },
    ],
    "bids": Array [
      Object {
        "amount": 224986,
        "price": 0.301,
      },
    ],
    "exchange": "bybit",
    "isSnapshot": false,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "XRPUSD",
    "timestamp": 2019-11-06T12:59:01.027Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map bybit messages 7`] = `Array []`;

exports[`mappers map bybit messages 8`] = `
Array [
  Object {
    "exchange": "bybit",
    "fundingRate": undefined,
    "indexPrice": undefined,
    "lastPrice": 9291.5,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "markPrice": undefined,
    "openInterest": undefined,
    "symbol": "BTCUSD",
    "timestamp": 2019-11-06T20:03:01.000Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map coinbase messages 1`] = `
Array [
  Object {
    "amount": 0.97133855,
    "exchange": "coinbase",
    "id": "216544",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 4.978,
    "side": "sell",
    "symbol": "ETC-GBP",
    "timestamp": 2019-08-01T00:00:03.816Z,
    "type": "trade",
  },
]
`;

exports[`mappers map coinbase messages 2`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0.432,
        "price": 9202.54,
      },
    ],
    "bids": Array [],
    "exchange": "coinbase",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BTC-EUR",
    "timestamp": 2019-08-01T00:00:03.818Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map coinbase messages 3`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 20.79816319,
        "price": 218.21,
      },
    ],
    "exchange": "coinbase",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "ETH-USD",
    "timestamp": 2019-08-01T00:00:03.869Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map coinbase messages 4`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 12,
        "price": 0.257175,
      },
    ],
    "bids": Array [
      Object {
        "amount": 5299,
        "price": 0.247175,
      },
    ],
    "exchange": "coinbase",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BAT-USDC",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map cryptofacilities messages 1`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 60.58,
      },
    ],
    "bids": Array [],
    "exchange": "cryptofacilities",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "FI_LTCUSD_190426",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map cryptofacilities messages 2`] = `
Array [
  Object {
    "exchange": "cryptofacilities",
    "fundingRate": undefined,
    "indexPrice": 60.31,
    "lastPrice": 60.69,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "markPrice": 60.61,
    "openInterest": 1692330,
    "symbol": "FI_LTCUSD_190628",
    "timestamp": 2019-04-01T00:00:00.684Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map cryptofacilities messages 3`] = `
Array [
  Object {
    "exchange": "cryptofacilities",
    "fundingRate": 0.000001739491032443,
    "indexPrice": 60.31,
    "lastPrice": 60.35,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "markPrice": 60.38,
    "openInterest": 631360,
    "symbol": "PI_LTCUSD",
    "timestamp": 2019-04-01T00:00:00.695Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map cryptofacilities messages 4`] = `
Array [
  Object {
    "amount": 3,
    "exchange": "cryptofacilities",
    "id": undefined,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 4088.5,
    "side": "buy",
    "symbol": "FI_XBTUSD_190426",
    "timestamp": 2019-04-01T00:00:02.518Z,
    "type": "trade",
  },
]
`;

exports[`mappers map cryptofacilities messages 5`] = `
Array [
  Object {
    "amount": 166,
    "exchange": "cryptofacilities",
    "id": "06842286-3a57-412c-8cb5-b61db36903d3",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 9680,
    "side": "sell",
    "symbol": "FI_XBTUSD_190927",
    "timestamp": 2019-09-01T00:00:42.739Z,
    "type": "trade",
  },
]
`;

exports[`mappers map cryptofacilities messages 6`] = `
Array [
  Object {
    "exchange": "cryptofacilities",
    "fundingRate": -8.92730506785e-7,
    "indexPrice": 64.33,
    "lastPrice": 64.34,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "markPrice": 64.295,
    "openInterest": 2074134,
    "symbol": "PI_LTCUSD",
    "timestamp": 2019-09-01T00:00:52.217Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map cryptofacilities messages 7`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 1,
        "price": 64.28,
      },
      Object {
        "amount": 9216,
        "price": 64.31,
      },
    ],
    "bids": Array [
      Object {
        "amount": 2978,
        "price": 64.27,
      },
      Object {
        "amount": 5000,
        "price": 64.26,
      },
    ],
    "exchange": "cryptofacilities",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "PI_LTCUSD",
    "timestamp": 2019-09-01T00:00:00.518Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map cryptofacilities messages 8`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 14912,
        "price": 64.41,
      },
    ],
    "bids": Array [],
    "exchange": "cryptofacilities",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "PI_LTCUSD",
    "timestamp": 2019-09-01T00:00:42.122Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map cryptofacilities messages 9`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 0,
        "price": 64.24,
      },
    ],
    "exchange": "cryptofacilities",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "PI_LTCUSD",
    "timestamp": 2019-09-01T00:00:42.131Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map deribit messages 1`] = `
Array [
  Object {
    "amount": 2000,
    "exchange": "deribit",
    "id": "39355898",
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "price": 9598.5,
    "side": "sell",
    "symbol": "BTC-PERPETUAL",
    "timestamp": 2019-09-01T00:00:22.565Z,
    "type": "trade",
  },
  Object {
    "amount": 50,
    "exchange": "deribit",
    "id": "39355899",
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "price": 9598.5,
    "side": "sell",
    "symbol": "BTC-PERPETUAL",
    "timestamp": 2019-09-01T00:00:22.565Z,
    "type": "trade",
  },
]
`;

exports[`mappers map deribit messages 2`] = `Array []`;

exports[`mappers map deribit messages 3`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 179803,
        "price": 218.6,
      },
      Object {
        "amount": 7887,
        "price": 218.65,
      },
    ],
    "bids": Array [
      Object {
        "amount": 1895,
        "price": 217.8,
      },
      Object {
        "amount": 712,
        "price": 217.75,
      },
    ],
    "exchange": "deribit",
    "isSnapshot": true,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "ETH-PERPETUAL",
    "timestamp": 2019-08-01T00:00:00.273Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map deribit messages 4`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 64903,
        "price": 219.2,
      },
      Object {
        "amount": 19343,
        "price": 219.1,
      },
    ],
    "bids": Array [
      Object {
        "amount": 0,
        "price": 217.8,
      },
    ],
    "exchange": "deribit",
    "isSnapshot": false,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "symbol": "ETH-PERPETUAL",
    "timestamp": 2019-08-01T00:00:54.272Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map deribit messages 5`] = `
Array [
  Object {
    "exchange": "deribit",
    "fundingRate": 0.00016281,
    "indexPrice": 10091.15,
    "lastPrice": 10095.5,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "markPrice": 10094.1,
    "openInterest": 66128281,
    "symbol": "BTC-PERPETUAL",
    "timestamp": 2019-08-01T00:00:04.229Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map deribit messages 6`] = `
Array [
  Object {
    "exchange": "deribit",
    "fundingRate": -0.00008477,
    "indexPrice": 8305.94,
    "lastPrice": 8304.5,
    "localTimestamp": 2019-06-01T00:00:28.619Z,
    "markPrice": 8304.39,
    "openInterest": 84844461,
    "symbol": "BTC-PERPETUAL",
    "timestamp": 2019-10-01T00:00:03.897Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map ftx messages 1`] = `Array []`;

exports[`mappers map ftx messages 2`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 20.1695,
        "price": 9807.75,
      },
    ],
    "bids": Array [
      Object {
        "amount": 15.5629,
        "price": 9805,
      },
    ],
    "exchange": "ftx",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BTC-1227",
    "timestamp": 2019-09-01T00:00:01.328Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map ftx messages 3`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0,
        "price": 21.0125,
      },
    ],
    "bids": Array [],
    "exchange": "ftx",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BNB-PERP",
    "timestamp": 2019-09-01T00:00:05.667Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map ftx messages 4`] = `
Array [
  Object {
    "amount": 0.03,
    "exchange": "ftx",
    "id": undefined,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 64.33,
    "side": "sell",
    "symbol": "LTC-PERP",
    "timestamp": 2019-09-01T00:00:12.659Z,
    "type": "trade",
  },
]
`;

exports[`mappers map ftx messages 5`] = `
Array [
  Object {
    "amount": 0.13,
    "exchange": "ftx",
    "id": "1139499",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 181.86,
    "side": "sell",
    "symbol": "ETH-PERP",
    "timestamp": 2019-10-01T00:00:21.260Z,
    "type": "trade",
  },
]
`;

exports[`mappers map gemini messages 1`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0.078285,
        "price": 15,
      },
    ],
    "bids": Array [
      Object {
        "amount": 51.55728,
        "price": 0.688,
      },
      Object {
        "amount": 1.168083,
        "price": 0.686,
      },
    ],
    "exchange": "gemini",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "ZECLTC",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map gemini messages 2`] = `
Array [
  Object {
    "amount": 0.1,
    "exchange": "gemini",
    "id": "8280715334",
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 8325,
    "side": "buy",
    "symbol": "BTCUSD",
    "timestamp": 2019-10-01T00:00:20.080Z,
    "type": "trade",
  },
]
`;

exports[`mappers map gemini messages 3`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 88.236,
        "price": 0.02189,
      },
      Object {
        "amount": 4,
        "price": 0.02184,
      },
      Object {
        "amount": 0,
        "price": 0.02185,
      },
      Object {
        "amount": 149.57,
        "price": 0.02188,
      },
    ],
    "bids": Array [],
    "exchange": "gemini",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "ETHBTC",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map hitbtc messages 1`] = `Array []`;

exports[`mappers map hitbtc messages 2`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 31400,
        "price": 4.255e-8,
      },
    ],
    "bids": Array [
      Object {
        "amount": 2200,
        "price": 4.245e-8,
      },
    ],
    "exchange": "hitbtc",
    "isSnapshot": true,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "BCNBTC",
    "timestamp": 2019-11-22T00:00:00.040Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map hitbtc messages 3`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 0,
        "price": 0.000104487,
      },
      Object {
        "amount": 8865,
        "price": 0.000073314,
      },
    ],
    "exchange": "hitbtc",
    "isSnapshot": false,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "POAETH",
    "timestamp": 2019-11-22T00:00:40.148Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map hitbtc messages 4`] = `Array []`;

exports[`mappers map hitbtc messages 5`] = `
Array [
  Object {
    "amount": 0.03,
    "exchange": "hitbtc",
    "id": "712213931",
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "price": 0.33559,
    "side": "sell",
    "symbol": "XMRETH",
    "timestamp": 2019-11-22T00:00:40.462Z,
    "type": "trade",
  },
]
`;

exports[`mappers map huobi messages 1`] = `Array []`;

exports[`mappers map huobi messages 2`] = `Array []`;

exports[`mappers map huobi messages 3`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 20,
        "price": 9469.88,
      },
      Object {
        "amount": 8,
        "price": 9470.38,
      },
    ],
    "bids": Array [
      Object {
        "amount": 35,
        "price": 9467.21,
      },
      Object {
        "amount": 132,
        "price": 9467.2,
      },
    ],
    "exchange": "huobi",
    "isSnapshot": true,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "BTC_NW",
    "timestamp": 2019-11-05T00:00:01.193Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map huobi messages 4`] = `
Array [
  Object {
    "amount": 62,
    "exchange": "huobi",
    "id": "251029750220000",
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "price": 190.031,
    "side": "sell",
    "symbol": "ETH_CQ",
    "timestamp": 2019-11-05T00:00:28.237Z,
    "type": "trade",
  },
]
`;

exports[`mappers map huobi messages 5`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 734,
        "price": 299.375,
      },
    ],
    "bids": Array [
      Object {
        "amount": 1,
        "price": 290.864,
      },
      Object {
        "amount": 0,
        "price": 290.966,
      },
    ],
    "exchange": "huobi",
    "isSnapshot": false,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "BCH_CQ",
    "timestamp": 2019-11-05T00:00:28.401Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map huobi messages 6`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 1033141.41,
        "price": 6.35e-8,
      },
      Object {
        "amount": 269808.94,
        "price": 6.4e-8,
      },
    ],
    "bids": Array [
      Object {
        "amount": 45542.05,
        "price": 6.22e-8,
      },
      Object {
        "amount": 663504.55,
        "price": 6.21e-8,
      },
    ],
    "exchange": "huobi",
    "isSnapshot": true,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "mexbtc",
    "timestamp": 2019-11-04T23:58:40.067Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map huobi messages 7`] = `
Array [
  Object {
    "amount": 1569.86,
    "exchange": "huobi",
    "id": "100027416191",
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "price": 6.37e-8,
    "side": "buy",
    "symbol": "mexbtc",
    "timestamp": 2019-11-04T23:44:48.761Z,
    "type": "trade",
  },
]
`;

exports[`mappers map huobi messages 8`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [],
    "exchange": "huobi",
    "isSnapshot": false,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "waxpbtc",
    "timestamp": 2019-11-05T00:00:02.010Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map huobi messages 9`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 1.07,
        "price": 0.9087,
      },
      Object {
        "amount": 1760.6161,
        "price": 0.9088,
      },
    ],
    "bids": Array [
      Object {
        "amount": 1877.1994,
        "price": 0.9073,
      },
    ],
    "exchange": "huobi",
    "isSnapshot": true,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "ontusdt",
    "timestamp": 2019-11-05T00:00:01.077Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map huobi messages 10`] = `
Array [
  Object {
    "amount": 6.5286,
    "exchange": "huobi",
    "id": "10020171792852100010452",
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "price": 0.006663,
    "side": "buy",
    "symbol": "xmrbtc",
    "timestamp": 2019-10-16T15:03:59.378Z,
    "type": "trade",
  },
]
`;

exports[`mappers map huobi messages 11`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 437407.32,
        "price": 1.55e-7,
      },
      Object {
        "amount": 0,
        "price": 4.75e-8,
      },
    ],
    "bids": Array [
      Object {
        "amount": 731389.72,
        "price": 4.37e-8,
      },
    ],
    "exchange": "huobi",
    "isSnapshot": false,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "dtabtc",
    "timestamp": 2019-11-05T00:00:02.012Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map kraken messages 1`] = `
Array [
  Object {
    "amount": 2.51146536,
    "exchange": "kraken",
    "id": undefined,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 0.011365,
    "side": "sell",
    "symbol": "LTC/XBT",
    "timestamp": 2019-07-01T00:00:01.587Z,
    "type": "trade",
  },
]
`;

exports[`mappers map kraken messages 2`] = `
Array [
  Object {
    "amount": 0.01596347,
    "exchange": "kraken",
    "id": undefined,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 9482.4,
    "side": "sell",
    "symbol": "XBT/EUR",
    "timestamp": 2019-07-01T00:00:58.512Z,
    "type": "trade",
  },
  Object {
    "amount": 0.28522465,
    "exchange": "kraken",
    "id": undefined,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "price": 9488.2,
    "side": "buy",
    "symbol": "XBT/EUR",
    "timestamp": 2019-07-01T00:00:58.557Z,
    "type": "trade",
  },
]
`;

exports[`mappers map kraken messages 3`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 35.02658459,
        "price": 87.6,
      },
    ],
    "exchange": "kraken",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "XMR/USD",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map kraken messages 4`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 27.71904764,
        "price": 413.9,
      },
      Object {
        "amount": 0,
        "price": 403.5,
      },
      Object {
        "amount": 0,
        "price": 400.3,
      },
    ],
    "bids": Array [
      Object {
        "amount": 3.38983321,
        "price": 400,
      },
    ],
    "exchange": "kraken",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BCH/USD",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map kraken messages 5`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 33.955,
        "price": 352,
      },
      Object {
        "amount": 5.895279,
        "price": 351.5,
      },
    ],
    "exchange": "kraken",
    "isSnapshot": false,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "BCH/EUR",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map kraken messages 6`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 3,
        "price": 0.102987,
      },
    ],
    "bids": Array [
      Object {
        "amount": 2,
        "price": 0.10281,
      },
    ],
    "exchange": "kraken",
    "isSnapshot": true,
    "localTimestamp": 2019-09-01T00:00:01.275Z,
    "symbol": "book-1000",
    "timestamp": 2019-09-01T00:00:01.275Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map okcoin messages 1`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0.0425,
        "price": 7624.75,
      },
    ],
    "bids": Array [
      Object {
        "amount": 1.359,
        "price": 766,
      },
    ],
    "exchange": "okcoin",
    "isSnapshot": true,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "BTC-USD",
    "timestamp": 2019-11-22T00:00:01.547Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map okcoin messages 2`] = `Array []`;

exports[`mappers map okcoin messages 3`] = `Array []`;

exports[`mappers map okcoin messages 4`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 0.5985,
        "price": 6914.33,
      },
    ],
    "bids": Array [],
    "exchange": "okcoin",
    "isSnapshot": false,
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "symbol": "BTC-EUR",
    "timestamp": 2019-11-22T00:00:30.968Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map okcoin messages 5`] = `
Array [
  Object {
    "amount": 0.1,
    "exchange": "okcoin",
    "id": "459",
    "localTimestamp": 2019-12-01T00:00:01.275Z,
    "price": 20.38,
    "side": "buy",
    "symbol": "DCR-USD",
    "timestamp": 2019-11-09T07:53:40.478Z,
    "type": "trade",
  },
]
`;

exports[`mappers map okex messages 1`] = `
Array [
  Object {
    "amount": 0.12,
    "exchange": "okex",
    "id": "423886239",
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "price": 328.74,
    "side": "sell",
    "symbol": "BCH-USDT",
    "timestamp": 2019-08-01T00:00:08.806Z,
    "type": "trade",
  },
]
`;

exports[`mappers map okex messages 2`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 38,
        "price": 4084.57,
      },
      Object {
        "amount": 20,
        "price": 4085,
      },
    ],
    "bids": Array [
      Object {
        "amount": 4,
        "price": 4084.56,
      },
      Object {
        "amount": 29,
        "price": 4084.5,
      },
    ],
    "exchange": "okex",
    "isSnapshot": true,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "symbol": "BTC-USDT",
    "timestamp": 2019-08-01T00:00:08.930Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map okex messages 3`] = `Array []`;

exports[`mappers map okex messages 4`] = `Array []`;

exports[`mappers map okex-futures messages 1`] = `
Array [
  Object {
    "amount": 4,
    "exchange": "okex-futures",
    "id": "2578238628528131",
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "price": 4061.94,
    "side": "sell",
    "symbol": "BTC-USD-190628",
    "timestamp": 2019-03-31T23:59:59.388Z,
    "type": "trade",
  },
]
`;

exports[`mappers map okex-futures messages 2`] = `
Array [
  Object {
    "amount": 5,
    "exchange": "okex-futures",
    "id": "3269040623943685",
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "price": 10209.43,
    "side": "buy",
    "symbol": "BTC-USD-190927",
    "timestamp": 2019-08-01T00:00:01.320Z,
    "type": "trade",
  },
]
`;

exports[`mappers map okex-futures messages 3`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 38,
        "price": 4084.57,
      },
      Object {
        "amount": 20,
        "price": 4085,
      },
    ],
    "bids": Array [
      Object {
        "amount": 4,
        "price": 4084.56,
      },
      Object {
        "amount": 29,
        "price": 4084.5,
      },
    ],
    "exchange": "okex-futures",
    "isSnapshot": true,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "symbol": "BTC-USD-190405",
    "timestamp": 2019-08-01T00:00:08.930Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map okex-futures messages 4`] = `Array []`;

exports[`mappers map okex-futures messages 5`] = `
Array [
  Object {
    "exchange": "okex-futures",
    "fundingRate": undefined,
    "indexPrice": undefined,
    "lastPrice": undefined,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "markPrice": 10218.61,
    "openInterest": undefined,
    "symbol": "BTC-USD-190927",
    "timestamp": 2019-08-01T00:00:20.869Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map okex-futures messages 6`] = `
Array [
  Object {
    "exchange": "okex-futures",
    "fundingRate": undefined,
    "indexPrice": undefined,
    "lastPrice": 0.02249,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "markPrice": undefined,
    "openInterest": 24419,
    "symbol": "TRX-USD-190802",
    "timestamp": 2019-08-01T00:02:00.429Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map okex-futures messages 7`] = `Array []`;

exports[`mappers map okex-futures messages 8`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 74,
        "price": 8581.44,
      },
    ],
    "bids": Array [
      Object {
        "amount": 37,
        "price": 8581.38,
      },
    ],
    "exchange": "okex-futures",
    "isSnapshot": true,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "symbol": "BTC-USD-191018",
    "timestamp": 2019-10-10T08:50:14.528Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map okex-futures messages 9`] = `
Array [
  Object {
    "asks": Array [],
    "bids": Array [
      Object {
        "amount": 1459,
        "price": 2.25,
      },
    ],
    "exchange": "okex-futures",
    "isSnapshot": false,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "symbol": "EOS-USD-191206",
    "timestamp": 2019-12-03T15:14:59.904Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map okex-swap messages 1`] = `
Array [
  Object {
    "amount": 0.12,
    "exchange": "okex-swap",
    "id": "423886239",
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "price": 328.74,
    "side": "sell",
    "symbol": "BCH-USDT",
    "timestamp": 2019-08-01T00:00:08.806Z,
    "type": "trade",
  },
]
`;

exports[`mappers map okex-swap messages 2`] = `
Array [
  Object {
    "asks": Array [
      Object {
        "amount": 264,
        "price": 0.3198,
      },
      Object {
        "amount": 222,
        "price": 0.3199,
      },
      Object {
        "amount": 2014,
        "price": 0.3219,
      },
    ],
    "bids": Array [
      Object {
        "amount": 1646,
        "price": 0.3196,
      },
      Object {
        "amount": 1672,
        "price": 0.3195,
      },
    ],
    "exchange": "okex-swap",
    "isSnapshot": false,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "symbol": "XRP-USD-SWAP",
    "timestamp": 2019-08-01T00:00:08.930Z,
    "type": "book_change",
  },
]
`;

exports[`mappers map okex-swap messages 3`] = `
Array [
  Object {
    "exchange": "okex-swap",
    "fundingRate": undefined,
    "indexPrice": undefined,
    "lastPrice": 329.3,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "markPrice": undefined,
    "openInterest": undefined,
    "symbol": "BCH-USD-SWAP",
    "timestamp": 2019-08-01T00:00:02.483Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map okex-swap messages 4`] = `
Array [
  Object {
    "exchange": "okex-swap",
    "fundingRate": 0.00023534,
    "indexPrice": undefined,
    "lastPrice": 329.3,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "markPrice": undefined,
    "openInterest": undefined,
    "symbol": "BCH-USD-SWAP",
    "timestamp": 2019-08-01T00:00:02.483Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map okex-swap messages 5`] = `
Array [
  Object {
    "exchange": "okex-swap",
    "fundingRate": 0.00023534,
    "indexPrice": undefined,
    "lastPrice": 329.3,
    "localTimestamp": 2019-08-01T00:00:02.997Z,
    "markPrice": 329.3,
    "openInterest": undefined,
    "symbol": "BCH-USD-SWAP",
    "timestamp": 2019-08-01T00:00:20.773Z,
    "type": "derivative_ticker",
  },
]
`;

exports[`mappers map okex-swap messages 6`] = `Array []`;
